# AI-Agentic-LLM-RAG

./: .gitignore  README.md  cli.py  setup.py
.agent_tools/: commit_msg.txt  edit_script.sh  enhanced_generate.sh  generate_module.sh  versioning.sh
ai_agentic_core/: __init__.py  action_scheduler.py  code_analyzer.py  memory_analyzer.py  memory_manager.py  profiler.py  reasoning_engine.py
notebooks/: hyperparameter_tuning_1757067076.ipynb  reasoning_flow.ipynb
research/: advanced_reasoning_in_large_language_models_1756491303.md  advanced_reasoning_in_large_language_models_1756570296.md  advanced_reasoning_in_large_language_models_1756676218.md  advanced_reasoning_in_large_language_models_1756705331.md  advanced_reasoning_in_large_language_models_1756867747.md  advanced_reasoning_in_large_language_models_1756877952.md  advanced_reasoning_in_large_language_models_1756892363.md  advanced_reasoning_in_large_language_models_1756937394.md  advanced_reasoning_in_large_language_models_1756946781.md  advanced_reasoning_in_large_language_models_1757033272.md  advanced_reasoning_in_large_language_models_1757167716.md  advanced_reasoning_in_large_language_models_1757194596.md  advanced_reasoning_in_large_language_models_1757281011.md  advanced_reasoning_in_large_language_models_1757571384.md  advanced_reasoning_in_large_language_models_1757578528.md  advanced_reasoning_in_large_language_models_1757714980.md  advanced_reasoning_in_large_language_models_1757765871.md  (+3106 more)
rust_core/: Cargo.toml
rust_core/src/: agent.rs  lib.rs  memory.rs
tests/: test_feature_1756338386.py  (+4 more)
(+3130 files in other folders)
